# sherry

./: Dockerfile  README.md  docker-compose.yaml
install/telemetry_bridge/include/telemetry_bridge/msg/detail/: latency_stats__builder.hpp  latency_stats__struct.h  latency_stats__struct.hpp  latency_stats__type_support.c  latency_stats__type_support.cpp  telemetry_state__traits.hpp  telemetry_state__type_support.c
install/telemetry_bridge/lib/telemetry_bridge/: udp_bridge
install/telemetry_bridge/share/telemetry_bridge/: package.xml
install/telemetry_bridge/share/telemetry_bridge/cmake/: telemetry_bridge__rosidl_generator_cppExport.cmake  telemetry_bridge__rosidl_typesupport_introspection_cExport.cmake
install/telemetry_bridge/share/telemetry_bridge/msg/: LatencyStats.idl  TelemetryState.msg
log/: latest_build  latest_test  latest_test-result
models/training/: basilisk_dataset.yaml  check_env.py  docker-compose.training.yaml  preprocess_speed.py  requirements.txt  speed_dataset.yaml  train.sh  train_basilisk.py  train_speed.py
scripts/: build.sh  run.sh  start.sh  test.sh
src/: StateMonitorNode.cpp  UdpBridgeNode.cpp  main.cpp
src/basilisk/: camera_publisher.py
src/config/: bridge_params.yaml
src/cv_pipeline/: package.xml  setup.cfg  setup.py
src/cv_pipeline/config/: cv_params.yaml
src/cv_pipeline/cv_pipeline/: basilisk_camera_node.py  cv_pipeline_node.py
src/cv_pipeline/resource/: cv_pipeline
src/include/telemetry_bridge/: LatencyMonitor.hpp  UdpBridgeNode.hpp
src/launch/: bridge_launch.py
src/msg/: LatencyStats.msg  TelemetryState.msg
src/sim_clock/: CMakeLists.txt  package.xml
src/sim_clock/config/: clock_params.yaml
src/sim_clock/src/: SimClockNode.cpp  main.cpp
src/spacecraft_tf/include/spacecraft_tf/: SpacecraftTfNode.hpp
src/spacecraft_tf/src/: SpacecraftTfNode.cpp  main.cpp
src/telemetry_bridge/: CMakeLists.txt  package.xml
src/tests/: latency_test.cpp
src/thruster_control/: CMakeLists.txt  package.xml
src/thruster_control/config/: thruster_mix.yaml
src/thruster_control/include/thruster_control/: ThrusterControlNode.hpp
src/thruster_control/src/: ThrusterControlNode.cpp
