<?xml version="1.0"?>
<package format="3">
    <name>cv_pipeline</name>
    <version>0.0.1</version>
    <description>Computer vision pipeline for spacecraft docking detection.</description>
    <maintainer email="evanrowlands98@gmail.com">cv-pipeline</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>vision_msgs</depend>
    <depend>cv_bridge</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>