<?xml version="1.0"?>
<package format="3">
    <name>sim_clock</name>
    <version>0.0.1</version>
    <description>Simulation clock broadcaster for Sherry.</description>
    <maintainer email="evanrowlands98@gmail.com">sim-clock</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rosgraph_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>