<?xml version="1.0"?>
<package format="3">
    <name>thruster_control</name>
    <version>0.0.1</version>
    <description>Thruster mix controller for Sherry</description>
    <maintainer email="evanrowlands98@gmail.com">thruster-control</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>rosidl_default_runtime</depend>
    <depend>telemetry_bridge</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>